# golfsetridak-rust

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEPLOY.md  PORT.md  PRODUCT.md  README.md  SHOP-REPORT.md  deploy.sh
.stage-deploy/backend/: collections.toml  page.json
.stage-deploy/content/frettir/: hola-i-hoggi-april.md  hola-i-hoggi-hja-golfsetrinu.md  hringur-a-spani-um-paskana.md  komdu-sveiflunni-i-form.md  ny-vefsida-og-bokunarkerfi.md  opnun-sumartimabils-2026.md  trackman-uppfaersla-april-2026.md
.stage-deploy/content/legal/: skilmalar.md
.stage-deploy/content/notendahandbok/: 3-1-ad-greida-med-korti.md  6-5-sms-snidmat.md  6-6-stillingar.md
.stage-deploy/frontend/: admin_announcements.html  admin_bookings.html  admin_categories.html  admin_giftcard_detail.html  admin_giftcard_form.html  admin_giftcards.html  admin_nav.html  admin_payments.html  admin_product_form.html  admin_products.html  admin_settings.html  admin_sms.html  admin_users.html  book.html  calendar.html  cart.html  checkout.html  checkout_bank_transfer.html  footer.html  frettir.html  gjafabref.html  login.html  notfound.html  placeholder.html  robots.txt  shop.html  styles.css  um_okkur.html
backend/: collections.toml  page.json  routes.json
backend/data/: admin.json  checkout.json  gjafabref.json  home.json  my.json  verslun.json
content/: um-okkur.md
content/frettir/: keppni-golfsins-2026.md  king-of-the-north-motarodin.md  komdu-i-golf-i-hlyjunni.md
content/legal/: personuvernd.md
content/notendahandbok/: 6-7-payday-bokhald-og-vsk.md  _index.json
framework/: FORK.md
framework/crates/blobs/: Cargo.toml
framework/crates/blobs/src/: lib.rs
framework/crates/blobs/tests/: store.rs
framework/crates/collections/: Cargo.toml
framework/crates/collections/src/: error.rs  lib.rs  meta.rs  schema.rs  store.rs
framework/crates/collections/tests/: crud.rs  files.rs  relations.rs
framework/crates/css/: Cargo.toml
framework/crates/css/src/: generate.rs  lib.rs  scan.rs  theme.rs  utilities.rs
framework/crates/css/src/schemes/: akurai-light.yaml  akurai.yaml  claude-code-light.yaml  claude-code.yaml  nord-light.yaml
framework/crates/css/tests/: build.rs
framework/crates/http/: Cargo.toml
framework/crates/http/src/: form.rs  lib.rs  middleware.rs  middleware_builtins.rs  multipart.rs  pool.rs  reply.rs  request.rs  response.rs  server.rs  sse.rs
framework/crates/http/tests/: body.rs  middleware.rs  sse.rs
framework/crates/json/: Cargo.toml
framework/crates/json/src/: error.rs  lib.rs  parse.rs  value.rs
framework/crates/markdown/: Cargo.toml
framework/crates/markdown/src/: inline.rs  lib.rs
framework/crates/router/: Cargo.toml
framework/crates/router/src/: lib.rs  pattern.rs
framework/crates/storage/: Cargo.toml
framework/crates/storage/src/: lib.rs  meta.rs  node.rs  pager.rs  tree.rs
framework/crates/storage/tests/: pager.rs  tree.rs
framework/crates/template/: Cargo.toml
framework/crates/template/src/: ast.rs  error.rs  lib.rs  parse.rs  render.rs
framework/crates/toml/: Cargo.toml
framework/crates/toml/src/: error.rs  lexer.rs  lib.rs  parser.rs  value.rs
framework/crates/toml/tests/: collections.rs
framework/crates/vector/: Cargo.toml
framework/crates/vector/src/: client.rs  codec.rs  error.rs  http.rs  lib.rs  math.rs
framework/crates/ws/: Cargo.toml
framework/crates/ws/src/: base64.rs  conn.rs  frame.rs  handshake.rs  lib.rs  message.rs  sha1.rs
framework/crates/ws/tests/: echo.rs
frontend/: admin_announcements.html  admin_bookings.html  admin_categories.html  admin_giftcard_detail.html  admin_giftcard_form.html  admin_giftcards.html  admin_nav.html  admin_payments.html  admin_product_form.html  admin_products.html  admin_settings.html  admin_sms.html  admin_tournament_form.html  admin_tournaments.html  admin_users.html  article.html  book.html  calendar.html  cart.html  checkout.html  checkout_cancel.html  checkout_landsbankinn.html  checkout_success.html  footer.html  frettir.html  gjafabref.html  header.html  my.html  notendahandbok.html  shop.html  sitemap.xml  styles.css  tournaments.html
frontend/assets/: hero-golf.webm
src/: collections_api.rs  content.rs  main.rs  mime.rs  serve.rs
src/admin/: mod.rs  settings.rs
src/auth/: mod.rs
src/booking/: mod.rs  pricing.rs  store.rs  subscription.rs  subscription_sharing.rs  time.rs  validation.rs
src/cart/: mod.rs
src/checkout/: fulfillment.rs  landsbankinn.rs  mod.rs
src/giftcards/: mod.rs
src/shop/: mod.rs
tests/e2e/: package-lock.json  package.json  playwright.config.js
tests/e2e/playwright-report/: index.html
tests/e2e/specs/: 01-public-pages.spec.js  02-shop.spec.js.bak  03-booking.spec.js  04-checkout.spec.js  05-giftcards.spec.js  06-auth.spec.js  07-news-content.spec.js  08-performance.spec.js  09-admin.spec.js
