[package]
name = "akurai-toml"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure-std TOML-subset parser for AkurAI-Framework collections config. Zero dependencies."

[lib]
path = "src/lib.rs"

# No [dependencies] — std only, by design. See AGENTS.md principle #1.
